--- a/css/style.css
+++ b/css/style.css
@@ -823,7 +823,7 @@ label + .form-icon {
    08. Header
    ========================================================================== */
 .header {
-	background: #fff;
+	background: #ffdd00;
 	color: #222;
 }
 .header .top {
